TIMOB-9827 Animating views with negative origins (i.e., potentially off-screen) should invalidate parent to avoid Android delaying the animation start time.